qt-restricted-extras/qscintilla/gen_qscilexercpp.h

typedef struct QColor QColor;
typedef struct QFont QFont;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QsciLexerCPP QsciLexerCPP;
QsciLexerCPP* QsciLexerCPP_new();
QsciLexerCPP* QsciLexerCPP_new2(QObject* parent);
QsciLexerCPP* QsciLexerCPP_new3(QObject* parent, bool caseInsensitiveKeywords);
QMetaObject* QsciLexerCPP_metaObject(const QsciLexerCPP* self);
void* QsciLexerCPP_metacast(QsciLexerCPP* self, const char* param1);
int QsciLexerCPP_metacall(QsciLexerCPP* self, int param1, int param2, void** param3);
struct miqt_string QsciLexerCPP_tr(const char* s);
struct miqt_string QsciLexerCPP_trUtf8(const char* s);
const char* QsciLexerCPP_language(const QsciLexerCPP* self);
const char* QsciLexerCPP_lexer(const QsciLexerCPP* self);
struct miqt_array /* of struct miqt_string */  QsciLexerCPP_autoCompletionWordSeparators(const QsciLexerCPP* self);
const char* QsciLexerCPP_blockEnd(const QsciLexerCPP* self);
const char* QsciLexerCPP_blockStart(const QsciLexerCPP* self);
const char* QsciLexerCPP_blockStartKeyword(const QsciLexerCPP* self);
int QsciLexerCPP_braceStyle(const QsciLexerCPP* self);
const char* QsciLexerCPP_wordCharacters(const QsciLexerCPP* self);
QColor* QsciLexerCPP_defaultColor(const QsciLexerCPP* self, int style);
bool QsciLexerCPP_defaultEolFill(const QsciLexerCPP* self, int style);
QFont* QsciLexerCPP_defaultFont(const QsciLexerCPP* self, int style);
QColor* QsciLexerCPP_defaultPaper(const QsciLexerCPP* self, int style);
const char* QsciLexerCPP_keywords(const QsciLexerCPP* self, int set);
struct miqt_string QsciLexerCPP_description(const QsciLexerCPP* self, int style);
void QsciLexerCPP_refreshProperties(QsciLexerCPP* self);
bool QsciLexerCPP_foldAtElse(const QsciLexerCPP* self);
bool QsciLexerCPP_foldComments(const QsciLexerCPP* self);
bool QsciLexerCPP_foldCompact(const QsciLexerCPP* self);
bool QsciLexerCPP_foldPreprocessor(const QsciLexerCPP* self);
bool QsciLexerCPP_stylePreprocessor(const QsciLexerCPP* self);
void QsciLexerCPP_setDollarsAllowed(QsciLexerCPP* self, bool allowed);
bool QsciLexerCPP_dollarsAllowed(const QsciLexerCPP* self);
void QsciLexerCPP_setHighlightTripleQuotedStrings(QsciLexerCPP* self, bool enabled);
bool QsciLexerCPP_highlightTripleQuotedStrings(const QsciLexerCPP* self);
void QsciLexerCPP_setHighlightHashQuotedStrings(QsciLexerCPP* self, bool enabled);
bool QsciLexerCPP_highlightHashQuotedStrings(const QsciLexerCPP* self);
void QsciLexerCPP_setHighlightBackQuotedStrings(QsciLexerCPP* self, bool enabled);
bool QsciLexerCPP_highlightBackQuotedStrings(const QsciLexerCPP* self);
void QsciLexerCPP_setHighlightEscapeSequences(QsciLexerCPP* self, bool enabled);
bool QsciLexerCPP_highlightEscapeSequences(const QsciLexerCPP* self);
void QsciLexerCPP_setVerbatimStringEscapeSequencesAllowed(QsciLexerCPP* self, bool allowed);
bool QsciLexerCPP_verbatimStringEscapeSequencesAllowed(const QsciLexerCPP* self);
void QsciLexerCPP_setFoldAtElse(QsciLexerCPP* self, bool fold);
void QsciLexerCPP_setFoldComments(QsciLexerCPP* self, bool fold);
void QsciLexerCPP_setFoldCompact(QsciLexerCPP* self, bool fold);
void QsciLexerCPP_setFoldPreprocessor(QsciLexerCPP* self, bool fold);
void QsciLexerCPP_setStylePreprocessor(QsciLexerCPP* self, bool style);
struct miqt_string QsciLexerCPP_tr2(const char* s, const char* c);
struct miqt_string QsciLexerCPP_tr3(const char* s, const char* c, int n);
struct miqt_string QsciLexerCPP_trUtf82(const char* s, const char* c);
struct miqt_string QsciLexerCPP_trUtf83(const char* s, const char* c, int n);
const char* QsciLexerCPP_blockEnd1(const QsciLexerCPP* self, int* style);
const char* QsciLexerCPP_blockStart1(const QsciLexerCPP* self, int* style);
const char* QsciLexerCPP_blockStartKeyword1(const QsciLexerCPP* self, int* style);
bool QsciLexerCPP_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QsciLexerCPP_virtualbase_metaObject(const void* self);
bool QsciLexerCPP_override_virtual_metacast(void* self, intptr_t slot);
void* QsciLexerCPP_virtualbase_metacast(void* self, const char* param1);
bool QsciLexerCPP_override_virtual_metacall(void* self, intptr_t slot);
int QsciLexerCPP_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QsciLexerCPP_override_virtual_setFoldAtElse(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setFoldAtElse(void* self, bool fold);
bool QsciLexerCPP_override_virtual_setFoldComments(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setFoldComments(void* self, bool fold);
bool QsciLexerCPP_override_virtual_setFoldCompact(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setFoldCompact(void* self, bool fold);
bool QsciLexerCPP_override_virtual_setFoldPreprocessor(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setFoldPreprocessor(void* self, bool fold);
bool QsciLexerCPP_override_virtual_setStylePreprocessor(void* self, intptr_t slot);
void QsciLexerCPP_virtualbase_setStylePreprocessor(void* self, bool style);
bool QsciLexerCPP_override_virtual_language(void* self, intptr_t slot);
bool QsciLexerCPP_override_virtual_lexer(void* self, intptr_t slot);
const char* QsciLexerCPP_virtualbase_lexer(const void* self);
bool QsciLexerCPP_override_virtual_lexerId(void* self, intptr_t slot);
int QsciLexerCPP_virtualbase_lexerId(const void* self);
bool QsciLexerCPP_override_virtual_autoCompletionFillups(void* self, intptr_t slot);
const char* QsciLexerCPP_virtualbase_autoCompletionFillups(const void* self);
bool QsciLexerCPP_override_virtual_autoCompletionWordSeparators(void* self, intptr_t slot);
struct miqt_array /* of struct miqt_string */  QsciLexerCPP_virtualbase_autoCompletionWordSeparators(const void* self);
bool QsciLexerCPP_override_virtual_blockEnd(void* self, intptr_t slot);
const char* QsciLexerCPP_virtualbase_blockEnd(const void* self, int* style);
bool QsciLexerCPP_override_virtual_blockLookback(void* self, intptr_t slot);
int QsciLexerCPP_virtualbase_blockLookback(const void* self);
bool QsciLexerCPP_override_virtual_blockStart(void* self, intptr_t slot);
const char* QsciLexerCPP_virtualbase_blockStart(const void* self, int* style);
bool QsciLexerCPP_override_virtual_blockStartKeyword(void* self, intptr_t slot);
const char* QsciLexerCPP_virtualbase_blockStartKeyword(const void* self, int* style);
bool QsciLexerCPP_override_virtual_braceStyle(void* self, intptr_t slot);
int QsciLexerCPP_virtualbase_braceStyle(const void* self);
bool QsciLexerCPP_override_virtual_caseSensitive(void* self, intptr_t slot);
bool QsciLexerCPP_virtualbase_caseSensitive(const void* self);
bool QsciLexerCPP_override_virtual_color(void* self, intptr_t slot);
QColor* QsciLexerCPP_virtualbase_color(const void* self, int style);
bool QsciLexerCPP_override_virtual_eolFill(void* self, intptr_t slot);
bool QsciLexerCPP_virtualbase_eolFill(const void* self, int style);
bool QsciLexerCPP_override_virtual_font(void* self, intptr_t slot);
QFont* QsciLexerCPP_virtualbase_font(const void* self, int style);
bool QsciLexerCPP_override_virtual_indentationGuideView(void* self, intptr_t slot);
int QsciLexerCPP_virtualbase_indentationGuideView(const void* self);
const char* QsciLexerCPP_virtualbase_keywords(const void* self, int set);