qt-restricted-extras/qscintilla/gen_qscilexercpp.nim


proc fcQsciLexerCPP_new(): ptr cQsciLexerCPP {.importc: "QsciLexerCPP_new".}
proc fcQsciLexerCPP_new2(parent: pointer): ptr cQsciLexerCPP {.importc: "QsciLexerCPP_new2".}
proc fcQsciLexerCPP_new3(parent: pointer, caseInsensitiveKeywords: bool): ptr cQsciLexerCPP {.importc: "QsciLexerCPP_new3".}
proc fcQsciLexerCPP_metaObject(self: pointer, ): pointer {.importc: "QsciLexerCPP_metaObject".}
proc fcQsciLexerCPP_metacast(self: pointer, param1: cstring): pointer {.importc: "QsciLexerCPP_metacast".}
proc fcQsciLexerCPP_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QsciLexerCPP_metacall".}
proc fcQsciLexerCPP_tr(s: cstring): struct_miqt_string {.importc: "QsciLexerCPP_tr".}
proc fcQsciLexerCPP_trUtf8(s: cstring): struct_miqt_string {.importc: "QsciLexerCPP_trUtf8".}
proc fcQsciLexerCPP_language(self: pointer, ): cstring {.importc: "QsciLexerCPP_language".}
proc fcQsciLexerCPP_lexer(self: pointer, ): cstring {.importc: "QsciLexerCPP_lexer".}
proc fcQsciLexerCPP_autoCompletionWordSeparators(self: pointer, ): struct_miqt_array {.importc: "QsciLexerCPP_autoCompletionWordSeparators".}
proc fcQsciLexerCPP_blockEnd(self: pointer, ): cstring {.importc: "QsciLexerCPP_blockEnd".}
proc fcQsciLexerCPP_blockStart(self: pointer, ): cstring {.importc: "QsciLexerCPP_blockStart".}
proc fcQsciLexerCPP_blockStartKeyword(self: pointer, ): cstring {.importc: "QsciLexerCPP_blockStartKeyword".}
proc fcQsciLexerCPP_braceStyle(self: pointer, ): cint {.importc: "QsciLexerCPP_braceStyle".}
proc fcQsciLexerCPP_wordCharacters(self: pointer, ): cstring {.importc: "QsciLexerCPP_wordCharacters".}
proc fcQsciLexerCPP_defaultColor(self: pointer, style: cint): pointer {.importc: "QsciLexerCPP_defaultColor".}
proc fcQsciLexerCPP_defaultEolFill(self: pointer, style: cint): bool {.importc: "QsciLexerCPP_defaultEolFill".}
proc fcQsciLexerCPP_defaultFont(self: pointer, style: cint): pointer {.importc: "QsciLexerCPP_defaultFont".}
proc fcQsciLexerCPP_defaultPaper(self: pointer, style: cint): pointer {.importc: "QsciLexerCPP_defaultPaper".}
proc fcQsciLexerCPP_keywords(self: pointer, set: cint): cstring {.importc: "QsciLexerCPP_keywords".}
proc fcQsciLexerCPP_description(self: pointer, style: cint): struct_miqt_string {.importc: "QsciLexerCPP_description".}
proc fcQsciLexerCPP_refreshProperties(self: pointer, ): void {.importc: "QsciLexerCPP_refreshProperties".}
proc fcQsciLexerCPP_foldAtElse(self: pointer, ): bool {.importc: "QsciLexerCPP_foldAtElse".}
proc fcQsciLexerCPP_foldComments(self: pointer, ): bool {.importc: "QsciLexerCPP_foldComments".}
proc fcQsciLexerCPP_foldCompact(self: pointer, ): bool {.importc: "QsciLexerCPP_foldCompact".}
proc fcQsciLexerCPP_foldPreprocessor(self: pointer, ): bool {.importc: "QsciLexerCPP_foldPreprocessor".}
proc fcQsciLexerCPP_stylePreprocessor(self: pointer, ): bool {.importc: "QsciLexerCPP_stylePreprocessor".}
proc fcQsciLexerCPP_setDollarsAllowed(self: pointer, allowed: bool): void {.importc: "QsciLexerCPP_setDollarsAllowed".}
proc fcQsciLexerCPP_dollarsAllowed(self: pointer, ): bool {.importc: "QsciLexerCPP_dollarsAllowed".}
proc fcQsciLexerCPP_setHighlightTripleQuotedStrings(self: pointer, enabled: bool): void {.importc: "QsciLexerCPP_setHighlightTripleQuotedStrings".}
proc fcQsciLexerCPP_highlightTripleQuotedStrings(self: pointer, ): bool {.importc: "QsciLexerCPP_highlightTripleQuotedStrings".}
proc fcQsciLexerCPP_setHighlightHashQuotedStrings(self: pointer, enabled: bool): void {.importc: "QsciLexerCPP_setHighlightHashQuotedStrings".}
proc fcQsciLexerCPP_highlightHashQuotedStrings(self: pointer, ): bool {.importc: "QsciLexerCPP_highlightHashQuotedStrings".}
proc fcQsciLexerCPP_setHighlightBackQuotedStrings(self: pointer, enabled: bool): void {.importc: "QsciLexerCPP_setHighlightBackQuotedStrings".}
proc fcQsciLexerCPP_highlightBackQuotedStrings(self: pointer, ): bool {.importc: "QsciLexerCPP_highlightBackQuotedStrings".}
proc fcQsciLexerCPP_setHighlightEscapeSequences(self: pointer, enabled: bool): void {.importc: "QsciLexerCPP_setHighlightEscapeSequences".}
proc fcQsciLexerCPP_highlightEscapeSequences(self: pointer, ): bool {.importc: "QsciLexerCPP_highlightEscapeSequences".}
proc fcQsciLexerCPP_setVerbatimStringEscapeSequencesAllowed(self: pointer, allowed: bool): void {.importc: "QsciLexerCPP_setVerbatimStringEscapeSequencesAllowed".}
proc fcQsciLexerCPP_verbatimStringEscapeSequencesAllowed(self: pointer, ): bool {.importc: "QsciLexerCPP_verbatimStringEscapeSequencesAllowed".}
proc fcQsciLexerCPP_setFoldAtElse(self: pointer, fold: bool): void {.importc: "QsciLexerCPP_setFoldAtElse".}
proc fcQsciLexerCPP_setFoldComments(self: pointer, fold: bool): void {.importc: "QsciLexerCPP_setFoldComments".}
proc fcQsciLexerCPP_setFoldCompact(self: pointer, fold: bool): void {.importc: "QsciLexerCPP_setFoldCompact".}
proc fcQsciLexerCPP_setFoldPreprocessor(self: pointer, fold: bool): void {.importc: "QsciLexerCPP_setFoldPreprocessor".}
proc fcQsciLexerCPP_setStylePreprocessor(self: pointer, style: bool): void {.importc: "QsciLexerCPP_setStylePreprocessor".}
proc fcQsciLexerCPP_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciLexerCPP_tr2".}
proc fcQsciLexerCPP_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciLexerCPP_tr3".}
proc fcQsciLexerCPP_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QsciLexerCPP_trUtf82".}
proc fcQsciLexerCPP_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QsciLexerCPP_trUtf83".}
proc fcQsciLexerCPP_blockEnd1(self: pointer, style: ptr cint): cstring {.importc: "QsciLexerCPP_blockEnd1".}
proc fcQsciLexerCPP_blockStart1(self: pointer, style: ptr cint): cstring {.importc: "QsciLexerCPP_blockStart1".}
proc fcQsciLexerCPP_blockStartKeyword1(self: pointer, style: ptr cint): cstring {.importc: "QsciLexerCPP_blockStartKeyword1".}
proc fQsciLexerCPP_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QsciLexerCPP_virtualbase_metaObject".}
proc fcQsciLexerCPP_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_metaObject".}
proc fQsciLexerCPP_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QsciLexerCPP_virtualbase_metacast".}
proc fcQsciLexerCPP_override_virtual_metacast(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_metacast".}
proc fQsciLexerCPP_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QsciLexerCPP_virtualbase_metacall".}
proc fcQsciLexerCPP_override_virtual_metacall(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_metacall".}
proc fQsciLexerCPP_virtualbase_setFoldAtElse(self: pointer, fold: bool): void{.importc: "QsciLexerCPP_virtualbase_setFoldAtElse".}
proc fcQsciLexerCPP_override_virtual_setFoldAtElse(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setFoldAtElse".}
proc fQsciLexerCPP_virtualbase_setFoldComments(self: pointer, fold: bool): void{.importc: "QsciLexerCPP_virtualbase_setFoldComments".}
proc fcQsciLexerCPP_override_virtual_setFoldComments(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setFoldComments".}
proc fQsciLexerCPP_virtualbase_setFoldCompact(self: pointer, fold: bool): void{.importc: "QsciLexerCPP_virtualbase_setFoldCompact".}
proc fcQsciLexerCPP_override_virtual_setFoldCompact(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setFoldCompact".}
proc fQsciLexerCPP_virtualbase_setFoldPreprocessor(self: pointer, fold: bool): void{.importc: "QsciLexerCPP_virtualbase_setFoldPreprocessor".}
proc fcQsciLexerCPP_override_virtual_setFoldPreprocessor(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setFoldPreprocessor".}
proc fQsciLexerCPP_virtualbase_setStylePreprocessor(self: pointer, style: bool): void{.importc: "QsciLexerCPP_virtualbase_setStylePreprocessor".}
proc fcQsciLexerCPP_override_virtual_setStylePreprocessor(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_setStylePreprocessor".}
proc fcQsciLexerCPP_override_virtual_language(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_language".}
proc fQsciLexerCPP_virtualbase_lexer(self: pointer, ): cstring{.importc: "QsciLexerCPP_virtualbase_lexer".}
proc fcQsciLexerCPP_override_virtual_lexer(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_lexer".}
proc fQsciLexerCPP_virtualbase_lexerId(self: pointer, ): cint{.importc: "QsciLexerCPP_virtualbase_lexerId".}
proc fcQsciLexerCPP_override_virtual_lexerId(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_lexerId".}
proc fQsciLexerCPP_virtualbase_autoCompletionFillups(self: pointer, ): cstring{.importc: "QsciLexerCPP_virtualbase_autoCompletionFillups".}
proc fcQsciLexerCPP_override_virtual_autoCompletionFillups(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_autoCompletionFillups".}
proc fQsciLexerCPP_virtualbase_autoCompletionWordSeparators(self: pointer, ): struct_miqt_array{.importc: "QsciLexerCPP_virtualbase_autoCompletionWordSeparators".}
proc fcQsciLexerCPP_override_virtual_autoCompletionWordSeparators(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_autoCompletionWordSeparators".}
proc fQsciLexerCPP_virtualbase_blockEnd(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerCPP_virtualbase_blockEnd".}
proc fcQsciLexerCPP_override_virtual_blockEnd(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_blockEnd".}
proc fQsciLexerCPP_virtualbase_blockLookback(self: pointer, ): cint{.importc: "QsciLexerCPP_virtualbase_blockLookback".}
proc fcQsciLexerCPP_override_virtual_blockLookback(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_blockLookback".}
proc fQsciLexerCPP_virtualbase_blockStart(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerCPP_virtualbase_blockStart".}
proc fcQsciLexerCPP_override_virtual_blockStart(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_blockStart".}
proc fQsciLexerCPP_virtualbase_blockStartKeyword(self: pointer, style: ptr cint): cstring{.importc: "QsciLexerCPP_virtualbase_blockStartKeyword".}
proc fcQsciLexerCPP_override_virtual_blockStartKeyword(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_blockStartKeyword".}
proc fQsciLexerCPP_virtualbase_braceStyle(self: pointer, ): cint{.importc: "QsciLexerCPP_virtualbase_braceStyle".}
proc fcQsciLexerCPP_override_virtual_braceStyle(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_braceStyle".}
proc fQsciLexerCPP_virtualbase_caseSensitive(self: pointer, ): bool{.importc: "QsciLexerCPP_virtualbase_caseSensitive".}
proc fcQsciLexerCPP_override_virtual_caseSensitive(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_caseSensitive".}
proc fQsciLexerCPP_virtualbase_color(self: pointer, style: cint): pointer{.importc: "QsciLexerCPP_virtualbase_color".}
proc fcQsciLexerCPP_override_virtual_color(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_color".}
proc fQsciLexerCPP_virtualbase_eolFill(self: pointer, style: cint): bool{.importc: "QsciLexerCPP_virtualbase_eolFill".}
proc fcQsciLexerCPP_override_virtual_eolFill(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_eolFill".}
proc fQsciLexerCPP_virtualbase_font(self: pointer, style: cint): pointer{.importc: "QsciLexerCPP_virtualbase_font".}
proc fcQsciLexerCPP_override_virtual_font(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_font".}
proc fQsciLexerCPP_virtualbase_indentationGuideView(self: pointer, ): cint{.importc: "QsciLexerCPP_virtualbase_indentationGuideView".}
proc fcQsciLexerCPP_override_virtual_indentationGuideView(self: pointer, slot: int) {.importc: "QsciLexerCPP_override_virtual_indentationGuideView".}
proc fQsciLexerCPP_virtualbase_keywords(self: pointer, set: cint): cstring{.importc: "QsciLexerCPP_virtualbase_keywords".}
